fix font cut off issue

--- a/app/assets/stylesheets/footer.css.sass
+++ b/app/assets/stylesheets/footer.css.sass
@@ -21,7 +21,7 @@
 			font-weight: 400
 			font-size: 11px
 			letter-spacing: 0.05em
-			margin: 15px 12px
+			margin: 15px 11px
 			text-decoration: none	
 			text-transform: uppercase
 			&:hover
